--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <h1>Welcome to My Simple Website</h1>
+        <h1>Welcome to My Simple Website....version 1</h1>
     </header>
 
     <nav>
@@ -39,7 +39,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 My Simple Website</p>
+        <p>&copy; 2024 My Simple Website</p>
     </footer>
 
 </body>
